--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,5 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/mukaschultze/ha-must-inverter/issues",
   "requirements": ["pymodbus==3.6.2"],
-  "version": "0.0.1",
-  "usb": [{ "vid": "1a86", "pid": "7523" }]
+  "version": "0.0.1"
 }
