--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: "Adjust version number"
         shell: "bash"
         run: |
-          yq -i -o json '.version="${{ github.event.release.tag_name }}"' \
+          yq -i -o json '.version="${{ github.event.release.tag_name:1 }}"' \
             "${{ github.workspace }}/custom_components/must_inverter/manifest.json"
 
       - name: "ZIP the integration directory"
