--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         shell: "bash"
         run: |
           TAG=${{ github.event.release.tag_name }}
-          yq -i -o json '.version="${TAG#v}"' \
+          yq -i -o json '.version="${{TAG#v}}"' \
             "${{ github.workspace }}/custom_components/must_inverter/manifest.json"
 
       - name: "ZIP the integration directory"
