--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,15 @@ jobs:
       - name: "Checkout the repository"
         uses: "actions/checkout@v4.1.1"
 
+      - name: Set VERSION variable from tag
+        run: |
+          TAG=${{ github.event.release.tag_name }}
+          echo "VERSION=${TAG#v}" >> $GITHUB_ENV
+
       - name: "Adjust version number"
         shell: "bash"
         run: |
-          TAG=${{ github.event.release.tag_name }}
-          yq -i -o json '.version="${{TAG#v}}"' \
+          yq -i -o json '.version="${{ env.VERSION }}"' \
             "${{ github.workspace }}/custom_components/must_inverter/manifest.json"
 
       - name: "ZIP the integration directory"
