--- a/custom_components/must_inverter/manifest.json
+++ b/custom_components/must_inverter/manifest.json
@@ -8,6 +8,6 @@
   "integration_type": "device",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/mukaschultze/ha-must-inverter/issues",
-  "requirements": ["pymodbus==3.6.9"],
+  "requirements": ["pymodbus==3.6.9", "aiofiles==24.1.0"],
   "version": "0.0.1"
 }
